changed file name

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <a class="text-light" href="#"><i class="bi bi-linkedin"></i></a>
                 <a class="text-light" href="https://x.com/AMINUBabzy"><i class="bi bi-twitter-x"></i></a>
             </div>
-            <div class="text-center"><span>Next</span></div>
+            <div class="text-center"><span>Nextt</span></div>
         </div>
     </div>
     <div class="about-container bg-dark">
