--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     </div>
                     <div>
                         <a href="https://docs.google.com/document/d/1XL40L57KYXZo6FFlMVgUjnmRVDF923O-/edit?usp=drivesdk&ouid=118170112929987912777&rtpof=true&sd=true">
-                            <button type="button" class="btn btn-outline-light w-75"><i class="bi bi-download"></i> Download</button>
+                            <button type="button" class="btn btn-outline-light w-75"><i class="bi bi-download"></i> Preview</button>
                         </a> 
                     </div>
                 </div>
