Added projects layer, changed nav link styling and added images

--- a/index.html
+++ b/index.html
@@ -11,37 +11,33 @@
     <title>My portfolio</title>
 </head>
 <body>
+    <header class="mb-0">
+        <nav>
+            <ul>
+                <li>
+                    <a href="#home">HOME</a>
+                </li>
+                <li>
+                    <a href="#about">ABOUT</a>
+                </li>
+                <li>
+                    <a href="#resume">RESUME</a>
+                </li>
+                <li>
+                    <a href="#project">PROJECT</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <div class="home-container">
-        <header>
-            <nav class="navbar navbar-expand-sm navbar-dark">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    data-toggle="#navbarNav">
-                    <span class="navbar-toggler-icon bg-danger"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#home">HOME</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#about">ABOUT</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#resume">RESUME</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </header>
         <div class="home" id="home">
             <h1 class="display-1 text-center text-white">I'm Muhammad Baba Muhammad.</h1>
             <p class="lead text-center"><span>I'm a Nigerian based</span> Front End Software Developer and Photographer <span>creating awesome and effective visual identities for companies of all sizes around the globe. Let's</span> start scrolling <span>and learn more</span> about me.</p><hr class="mb-3">
-            <div class="text-center mb-5">
+            <div class="text-center pb-5">
                 <a class="text-light" href="https://www.facebook.com/MR.BABZY?mibextid=ZbWKwL"><i class="bi bi-facebook"></i></a>
                 <a class="text-light" href="#"><i class="bi bi-linkedin"></i></a>
                 <a class="text-light" href="https://x.com/AMINUBabzy"><i class="bi bi-twitter-x"></i></a>
             </div>
-            <div class="text-center"><span>Nextt</span></div>
         </div>
     </div>
     <div class="about-container bg-dark">
@@ -65,7 +61,7 @@
                     </div>
                     <div>
                         <a href="https://docs.google.com/document/d/1XL40L57KYXZo6FFlMVgUjnmRVDF923O-/edit?usp=drivesdk&ouid=118170112929987912777&rtpof=true&sd=true">
-                            <button type="button" class="btn btn-outline-light w-75"><i class="bi bi-view-stacked"></i> Preview</button>
+                            <button type="button" class="btn btn-outline-light w-100"><i class="bi bi-view-stacked"></i> Preview</button>
                         </a> 
                     </div>
                 </div>
@@ -94,7 +90,7 @@
                 <div>
                     <h4 class="skill text-uppercase">skills</h4>
                 </div>
-                <div>
+                <div class="language">
                     <div class="language mb-5">
                         <h4>HTML5</h4>
                         <div class="progress">
@@ -124,6 +120,57 @@
                         <div class="progress">
                             <div class="progress-bar bg-dark" style="width: 90%;"></div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="project-container">
+        <div class="project" id="project">
+            <div>
+                <h4>PROJECTS</h4>
+            </div>
+            <div class="screenshot">
+                <div class="banner">
+                    <img src="/img1/abc.com.jpg" alt="Registration Page">
+                    <div class="banner-description">
+                        <p>Remote Job App</p>
+                    </div>
+                </div>
+                <div class="banner">
+                    <img src="/img1/abc:signup.png" alt="Registration Page">
+                    <div class="banner-description">
+                        <p>Remote Job App</p>
+                    </div>
+                </div>
+                <div class="banner">
+                    <img src="/img1/account.jpg" alt="Open Account Page">
+                    <div class="banner-description">
+                        <p>Remote Job App</p>
+                    </div>
+                </div>
+                <div class="banner">
+                    <img src="/img1/Blog.jpg" alt="Blog Page">
+                    <div class="banner-description blog">
+                        <p>Blog Page</p>
+                    </div>
+                </div>
+                <div class="banner">
+                    <img src="/img1/Triene.jpg" alt="Signup Page">
+                    <div class="banner-description">
+                        <p>Workout App</p>
+                    </div>
+                </div>
+                <div class="banner">
+                    <img src="/img1/Wealthwise.jpg" alt="Financial Page">
+                    <div class="banner-description fintech">
+                        <p>Financial App</p>
+                    </div>
+                </div>
+                <div class="banner">
+                    <img src="/img1/workout.jpg" alt="Signup Page">
+                    <div class="banner-description">
+                        <p>Workout Registration Page</p>
                     </div>
                 </div>
             </div>
