--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <p class="lead text-center"><span>I'm a Nigerian based</span> Front End Software Developer and Photographer <span>creating awesome and effective visual identities for companies of all sizes around the globe. Let's</span> start scrolling <span>and learn more</span> about me.</p><hr class="mb-3">
             <div class="text-center pb-5">
                 <a class="text-light" href="https://www.facebook.com/MR.BABZY?mibextid=ZbWKwL"><i class="bi bi-facebook"></i></a>
-                <a class="text-light" href="#"><i class="bi bi-linkedin"></i></a>
+                <a class="text-light" href="https://www.linkedin.com/in/muhammad-muhammad-640b10237?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="bi bi-linkedin"></i></a>
                 <a class="text-light" href="https://x.com/AMINUBabzy"><i class="bi bi-twitter-x"></i></a>
             </div>
         </div>
@@ -60,7 +60,7 @@
                         <p>muhammadbaba1140@gmail.com</p>
                     </div>
                     <div>
-                        <a href="https://docs.google.com/document/d/1XL40L57KYXZo6FFlMVgUjnmRVDF923O-/edit?usp=drivesdk&ouid=118170112929987912777&rtpof=true&sd=true">
+                        <a href="https://docs.google.com/document/d/1XL40L57KYXZo6FFlMVgUjnmRVDF923O-/edit?usp=sharing&ouid=118170112929987912777&rtpof=true&sd=true">
                             <button type="button" class="btn btn-outline-light w-100"><i class="bi bi-view-stacked"></i> Preview</button>
                         </a> 
                     </div>
@@ -179,7 +179,7 @@
     <footer class="bg-dark text-light text-center py-5">
         <div class="footer mb-3">
             <a href="https://www.facebook.com/MR.BABZY?mibextid=ZbWKwL"><i class="bi bi-facebook text-light"></i></a>
-            <a href="#"><i class="bi bi-linkedin text-light"></i></a>
+            <a href="https://www.linkedin.com/in/muhammad-muhammad-640b10237?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="bi bi-linkedin text-light"></i></a>
             <a href="https://x.com/AMINUBabzy"><i class="bi bi-twitter-x text-light"></i></a>
         </div>
         <p>&copy; Copyright 2024 Baba. Design by Baba</p>
